# MixMixer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agent.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: RELEASE-v0.1.1.md  RELEASE-v0.1.2.md  RELEASE-v0.1.3.md  RELEASE-v0.1.4-beta.1.md  RELEASE-v0.1.4-beta.2.md  RELEASE-v0.1.4.md  TUTORIAL.md  architecture.md  decisions.md  dev-mix-mixer.md  devices.md  equalizer-apo.md  index.md  validate-mix-mixer.md
docs/audit/: 2026-07-14.md
docs/specs/: 2026-07-14-mix-mixer-slint-ui-design.md
mix-mixer/: Cargo.toml  README.md  config.example.json  config.json
mix-mixer/src/: config.rs  devices.rs  error.rs  main.rs
mix-mixer/src/audio/: engine.rs  metrics.rs  mixer.rs  mod.rs  resampler.rs  ring_buffer.rs
mix-mixer/src/i18n/: en.rs  fr.rs  mod.rs
mix-mixer/src/ui/: about.rs  mod.rs  settings.rs  theme.rs  tray.rs
