[package]
name = "mix-mixer"
version = "0.1.0"
edition = "2021"
description = "Forward microphone post-E-APO to VB-Cable virtual mic"
rust-version = "1.75"

[dependencies]
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = { version = "0.19", features = ["serde"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
winit = { version = "0.30", features = ["rwh_06"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
