[package]
name = "mix-mixer"
version = "0.1.4-beta.2"
edition = "2021"
description = "Forward microphone post-E-APO to VB-Cable virtual mic (low latency)"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Mestryx-dev/MixMixer"
homepage = "https://github.com/Mestryx-dev/MixMixer"
readme = "../README.md"
keywords = ["audio", "wasapi", "vb-cable", "microphone", "discord"]
categories = ["multimedia::audio"]

[dependencies]
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = { version = "0.19", features = ["serde"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Globalization", "Win32_UI_WindowsAndMessaging"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
winit = { version = "0.30", features = ["rwh_06"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
